<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>event_trigger</name>
  <version>0.1.0</version>
  <description>An Event Trigger node triggers the Rign Buffer Recorder node on a timer</description>
  <maintainer email="martnat8@oregonstate.edu">Nathan M</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>project_interfaces</depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
